--- a/1507.05255/On_the_quantum_measurement_problem.tex
+++ b/1507.05255/On_the_quantum_measurement_problem.tex
@@ -18,7 +18,6 @@ bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
 
-\usepackage[titletoc,toc,title]{appendix}
 \usepackage[ansinew]{inputenc}
 \usepackage{graphicx}
 \usepackage{amsmath}
@@ -134,7 +133,7 @@ In this paper, I attempt a personal account of my understanding of the measureme
 
 %\maketitle
 \setcounter{page}{1}
-section*{Two measurement problems}
+\section{Two measurement problems}
 
 There are at least two measurement problems in quantum mechanics\footnote{Two problems are assumed in Ref.~\cite{bub,pitowsky} and three problems are assumed in Ref.~\cite{maudlin}.}. The less prominent of the two (the ``small'' problem) is that of {\em explaining why a certain outcome -- as opposed to its alternatives -- occurs in a particular run of an experiment.} The bigger problem of the two (the ``big'' problem) is that of explaining the ways in which an experiment arrives at a particular outcome. It addresses the question of {\em what makes a measurement a measurement}\footnote{The proposed formulation of the two problems is inspired but not equivalent to the one of Ref.~\cite{bub,pitowsky} where the two categories of measurement problems were first introduced with the designations ``small'' and ``big''.}. 
 
@@ -156,7 +155,7 @@ Bohr and Heisenberg seem to have disagreed about the movability of the cut~\cite
 
 The question of the meaning of the quantum state is closely related to the measurement problem(s). Which approach one takes in addressing the later depends on the specific view one has on the former. The next section is devoted to this question. 
 
-\subsection*{What is the quantum state?}
+\section{What is the quantum state?}
 
 The discussion over the meaning of quantum states is often presented as a conflict between two fundamentally opposed approaches. The first approach speaks of ``states of reality'' that are independent of any empirical access, and implicitly assumes the existence of such states. The second approach refers to observations, and what we can know about them and deduce from them. This approach requires differentiation with regard to the question ``Knowledge about what?''. Insofar as the quantum state is seen as representing the observer's incomplete knowledge about an assumed ``state of reality'', it is not fundamentally dissimilar to the first approach. This is why, to use modern terminology, the distinction between a realist interpretation of a quantum state that is ``psi-ontic'' and one that is ``psi-epistemic''~\cite{spekkens} -- which actually is a distinction between two kinds of hidden variable theory -- is only relevant to supporters of the first approach. 
 
@@ -169,7 +168,7 @@ I share Malin's view on the meaning of the quantum state, which is essentially t
 
 The available experimental precision will in every particular arrangement determine to which objects the observer can meaningfully assign quantum states. This agrees with Bohr's view ``that for a given experimental setting the cut is determined by the nature of the problem ...'' That there is nothing in the theory that would prohibit reaching the necessary experimental precision to allow a meaningful state assignment to objects of increasingly large sizes -- eventually as large as our measurement devices -- reflects Heisenberg' view that the ``cut can be shifted arbitrarily far in the direction of the observer'', as he wrote in an unpublished paper~\cite{heisenberg} from 1935, in which he outlined his response to the Einstein, Podolsky, and Rosen paper from the same year\footnote{In the same paper, Heisenberg concludes: ``... the quantum mechanical predictions about the outcome of an arbitrary experiment are independent of the location of the cut ...'' This can be seen as a consequence of ``purification'' in quantum theory, which states that every mixed state of system A can always be seen as a state belonging to a part of a composite system AB that itself is in a pure state. This state is unique up to a reversible transformation on B. The assumption of purification is one of the central features of quantum theory, which, taken as an axiom together with a few other axioms, makes it possible to explain why the theory has the very mathematical structure it does~\cite{chiribella}.}. The measurement instrument and the observer can be included in the quantum mechanical description, and then observed by someone else, a ``superobserver'', for whom the original measurement instrument loses its previous status as a means for acquiring knowledge. For this purpose, she needs another set of ``superinstruments'' that are superior to the original instruments regarding their precision. 
 
-\subsection*{FAPP  irreversibility}
+\section{FAPP  irreversibility}
  
 The distinct outcomes of a measurement apparatus are associated with ``macroscopically distinct states''. (Only in that aspect does ``macroscopicity'' play a role in the measurement process.) These are defined as states that can still be differentiated even in those cases where the measurements are imprecise and coarse-grained. If, for example, just a few spins of a large magnet are flipped, then the entire quantum state of the magnet will change into an orthogonal one. Yet, at our macroscopic level, we will still perceive it as the very same magnet. In order for the change to become noticeable even in a coarse-grained measurement, the quantum states of a sufficiently large number of spins need to be changed.   
 
@@ -266,7 +265,7 @@ For the present distribution over perturbations both the evolution of the macros
 We conclude that the lack of the complete knowledge of the Hamiltonian circumvents the time reversal objection, also known as Loschmidt's paradox, which states that it should not be possible to deduce time irreversibility from an underlying time reversal theory. A similar argument could be applied to address the recurrence objection, which is based on the Poincar{\' e} recurrence theorem, that all finite systems are recurrent, i.e. return arbitrarily close to their initial state after a possibly very long time. Results show that recurrence times in the dynamics of quantum states could be extremely large~\cite{peres4}. A comprehensive study of various models of quantum measurement can be found in Ref.~\cite{balian}
 
 
-\subsection*{Deutsch's thought experiment}
+\section{Deutsch's thought experiment}
 
 In Ref.~\cite{deutsch}, Deutsch proposed an experiment which he claims can distinguish experimentally between the Copenhagen and the Everett interpretations of quantum mechanics. While I do not in any way see the necessity of assuming that the two interpretations might have distinct predictions in the experiment, I acknowledge that the experiment most strikingly demonstrates the necessity of a radical revision of our attitude to physical reality in quantum physics.
 
@@ -368,7 +367,7 @@ Finally, I comment on the view~\cite{grangier} that the cut cannot be moved to i
 
 The above-mentioned Bell's theorem for ``facts'' implies a striking departure from naive realism. This brings us to the question of the role of our physical theories. If physical theories do not describe ``physical reality {\it per se}'', what do they describe then? A possible answer is given by Bohr as communicated by Petersen~\cite{bohr}:``It is wrong to think that the task of physics is to find out how nature is. Physics concerns what we can say about nature''.
 
-\subsection*{Acknowledgements}
+\section{Acknowledgements}
 This work has been supported by the Austrian Science Fund (FWF) through CoQuS, SFB FoQuS, and Individual Project 2462. I would like to acknowledge discussions with Mateus Araujo, Borivoje Daki{\'c}, Philippe Grangier, Richard Healey, Johannes Kofler, Luis Masanes and Anton Zeilinger.
 
 
