--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,39 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-08-17 21:13:12 -0400 
+%% Created for Pete Su at 2019-08-20 22:14:33 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Wennerstrom2017,
+	Author = {Wennerstr{\"o}m, H{\aa}kan and Westlund, Per-Olof},
+	Date-Added = {2019-08-20 22:14:18 -0400},
+	Date-Modified = {2019-08-20 22:14:32 -0400},
+	Doi = {10.3390/e19050186},
+	Journal = {Entropy},
+	Month = {04},
+	Pages = {186},
+	Title = {A Quantum Description of the Stern--Gerlach Experiment},
+	Volume = {19},
+	Year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.3390/e19050186}}
+
+@incollection{Brukner2016,
+	Author = {{\v{C}}aslav Brukner},
+	Booktitle = {Quantum [Un]Speakables {II}},
+	Date-Added = {2019-08-20 08:28:10 -0400},
+	Date-Modified = {2019-08-20 08:28:10 -0400},
+	Doi = {10.1007/978-3-319-38987-5_5},
+	Month = nov,
+	Pages = {95--117},
+	Publisher = {Springer International Publishing},
+	Title = {On the Quantum Measurement Problem},
+	Url = {https://doi.org/10.1007/978-3-319-38987-5_5},
+	Year = {2016},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-319-38987-5_5}}
 
 @article{Myrvold2003,
 	Abstract = {Recent literature on Bohm's alternative to mainstream quantum mechanics may create the misleading impression that, except for perfunctory dismissals, the theory was ignored by the physics community in the years immediately following its proposal. As a matter of fact, Einstein, Pauli, and Heisenberg all published criticisms of Bohm's theory, explaining their reasons for not accepting the theory. These criticisms will be discussed and evaluated in this article. [ABSTRACT FROM AUTHOR]},
