--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-08-20 22:14:33 -0400 
+%% Created for Pete Su at 2019-08-21 07:46:33 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Hsu2011,
+	Author = {Hsu, Bailey C. and Berrondo, Manuel and Van Huele, Jean-Fran\ifmmode \mbox{\c{c}}\else \c{c}\fi{}ois S.},
+	Date-Added = {2019-08-21 07:46:10 -0400},
+	Date-Modified = {2019-08-21 07:46:28 -0400},
+	Doi = {10.1103/PhysRevA.83.012109},
+	Issue = {1},
+	Journal = {Phys. Rev. A},
+	Month = {Jan},
+	Numpages = {12},
+	Pages = {012109},
+	Publisher = {American Physical Society},
+	Title = {Stern-Gerlach dynamics with quantum propagators},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.83.012109},
+	Volume = {83},
+	Year = {2011},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.83.012109},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.83.012109}}
 
 @article{Wennerstrom2017,
 	Author = {Wennerstr{\"o}m, H{\aa}kan and Westlund, Per-Olof},
