--- a/0707.2832/RMPZurek6.tex
+++ b/0707.2832/RMPZurek6.tex
@@ -3,7 +3,7 @@
 %\documentstyle[aps,preprint]{revtex}
 %\documentstyle[aps,prl,epsfig]{revtex}
 %%%%%\documentclass[aps,preprint,prl,epsfig]{revtex4}
-\documentclass[aps,twocolumn,rmp,epsfig]{revtex4}
+\documentclass[aps,rmp,epsfig,11pt]{revtex4}
 %!!\documentclass[aps,preprint,rmp,epsfig]{revtex4}
 %\documentstyle[aps,twocolumn,pra]{revtex}
 %\def\lsim{\mathrel{\raise2pt\hbox to 8pt{\raise -5pt\hbox{$\sim$}\hss{$<$}}}}
@@ -18,7 +18,29 @@
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{amsmath}
-\usepackage[bookmarksnumbered, bookmarks, breaklinks, linktocpage]{hyperref}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
 
 %#############################
 
@@ -152,7 +174,7 @@
 \address{Theory Division, MS B213, LANL
     Los Alamos, NM, 87545, U.S.A.}
 
-\date{\today}
+\date{9 Jul 2007}
 
 \begin{abstract}
 Starting with basic axioms of quantum theory we revisit  ``Relative State Interpretation'' set out 50 years ago by Hugh Everett III (1957a,b). His approach explains ``collapse of the wavepacket'' by postulating 
@@ -636,12 +658,12 @@ Player ignorant of the face value of cards in front of him (Fig. 1a) will be {\i
 and only one of the cards is favorable (e.g., a spade he needs to win). 
 
 
-\begin{figure*}[tb]
+\begin{figure*}[htb]
 \begin{tabular}{l}
 \vspace{-0.15in} 
-\includegraphics[width=4.0in]{allcards.pdf}\\
+\includegraphics[width=3.0in]{allcards.pdf}\\
 \end{tabular}
-\caption{{\it Probabilities and symmetry}: 
+\caption{\footnotesize{\it Probabilities and symmetry}: 
 {\bf (a)} Laplace (1820) appealed to subjective invariance associated with `indifference' of the observer based on his ignorance of the real physical state to define probability through his {\it principle of equal likelihood}. When observers ignorance means he is indifferent to swapping (e.g., of cards), alternative 
 events should be considered equiprobable. So, for the cards above, subjective probability 
 $p_\spadesuit ={ \frac 1 2}$ would be inferred by an observer who does not know their face value, 
@@ -994,19 +1016,62 @@ probability $ \frac 1 3$, but rather because there are only two (mutually exclus
 Bypassing appeals to additivity of probabilities is a good idea in interpreting a theory with
 another principle of additivity -- quantum superposition principle -- which trumps additivity of probabilities or at least classical intuitive ideas about what should be additive (e.g., in the double slit experiment). Here this conflict is averted: Probabilities of Schmidt states can be added because of the loss of phase coherence that follows directly from envariance as we have established earlier (Zurek, 2005).
 
-Consider now a general case.For simplicity we focus on entangled statewith only two non-zero coefficients:$$ |\psi_{\cal SE} \rangle = \alpha |0\rangle |\varepsilon_0 \rangle +\beta |1 \rangle |\varepsilon_1 \rangle \ , \eqno(3.7b)$$and assume$ \alpha = \sqrt {\frac m M}; \ \beta = \sqrt {{\frac {M-m} M}} $, with integer $m $, $ M$.
-% We ignore phases on the basis of their envariance. \hocom{When there are no $m$ and $M$ for which Eq. (3.10b) holds exactly, we can stillput upper and lower bounds on $|\alpha|$ and $|\beta|$ by taking a sequenceof increasing $M$ and $m_+=m_-+1$ such that $\sqrt{m_+/M} > |\alpha| > \sqrt {m_-/M}$ and, by continuity, recover our conclusions in the$M \rightarrow \infty$ limit.}
-As before, the strategy is to convert a general entangled stateinto an even state, and then to apply envariance under swaps.
-\hocom{-based reasoning that has led to Eq. (9). ``Fine-graining'' is a well - known trick, used on similar occassions in the classical probability textbooks, but applicable also in the quantum context$^{16,17}$. }To implement it, we assume ${\cal E}$  has sufficient dimensionality to
+Consider now a general case.
+For simplicity we focus on entangled state
+with only two non-zero coefficients:
+$$ |\psi_{\cal SE} \rangle = \alpha |0\rangle |\varepsilon_0 \rangle +
+\beta |1 \rangle |\varepsilon_1 \rangle \ , \eqno(3.7b)$$
+and assume
+$ \alpha = \sqrt {\frac m M}; \ 
+\beta = \sqrt {{\frac {M-m} M}} $, with integer $m $, $ M$.
+% We ignore phases on the basis of their envariance. 
+\hocom{When there are no $m$ and $M$ for which Eq. (3.10b) holds exactly, we can still
+put upper and lower bounds on $|\alpha|$ and $|\beta|$ by taking a sequence
+of increasing $M$ and $m_+=m_-+1$ such that $\sqrt{m_+/M} > |\alpha| 
+> \sqrt {m_-/M}$ and, by continuity, recover our conclusions in the
+$M \rightarrow \infty$ limit.}
+
+As before, the strategy is to convert a general entangled state
+into an even state, and then to 
+apply envariance under swaps.
+\hocom{-based reasoning that has led to Eq. (9). ``Fine-graining'' 
+is a well - known trick, used on similar occassions in the classical 
+probability textbooks, but applicable also in the quantum context$^{16,17}$. }
+To implement it, we assume ${\cal E}$  has sufficient dimensionality to
 allow decomposition of $|\varepsilon_0\rangle$ and $|\varepsilon_1\rangle$ in a different 
-orthonormal basis $\{ |e_k\rangle \}$:$$ |\varepsilon_0\rangle = \sum_{k=1}^m |e_k\rangle/\sqrt m ; \ \ \ \ \ |\varepsilon_1\rangle = \sum_{k=m+1}^M |e_k\rangle/\sqrt {M-m} $$
+orthonormal basis $\{ |e_k\rangle \}$:
+$$ |\varepsilon_0\rangle = \sum_{k=1}^m |e_k\rangle/\sqrt m ; \ \ \ \ \ 
+|\varepsilon_1\rangle = \sum_{k=m+1}^M |e_k\rangle/\sqrt {M-m} $$
 %and ${\cal C}$ with sufficiently large ${\cal H}_{\cal C}$ to ``fine-grain" the state. 
 
-Envariance we need is associated with counterswaps of ${\cal E}$ that undo swaps of the joint state of the compositesystem ${\cal SC}$. To exhibit it, we let ancilla ${\cal C}$ interact with ${\cal E}$ as before, e.g. by employing ${\cal E}$ as a control to carry out
-$|e_k\rangle |c_0 \rangle \rightarrow |e_k\rangle |c_k \rangle $,where $|c_0\rangle$ is the initial state of ${\cal C}$ in some suitableorthonormal basis $\{|c_k\rangle \}$. Thus;%\begin{eqnarray*}$$ |\bar \Psi_{\cal SCE}\rangle \propto  \sqrt{m} ~ |0\rangle ~ \sum_{k=1}^m  {{ |c_k\rangle |e_k\rangle } \over \sqrt m} \\  + \sqrt {M-m}~|1\rangle \sum_{k=m+1}^M {{|c_k\rangle |e_k\rangle}\over \sqrt{M-m}} \eqno(3.8b) $$
-%\quad (\mathrm{9}a) \end{eqnarray*}obtains. This ${\cal CE}$ interaction can happen far from ${\cal S}$, so by Fact 1 itcannot influence probabilities in ${\cal S}$.$|\bar \Psi_{\cal SCE}\rangle $ is envariant under swaps of states $|s, c_k\rangle$ of the composite ${\cal SC}$ system (where $s$ stands for 0 or 1, as needed).
+Envariance we need is associated with counterswaps 
+of ${\cal E}$ that undo swaps of the joint state of the composite
+system ${\cal SC}$. To exhibit it, we let ancilla ${\cal C}$ interact with ${\cal E}$ 
+as before, e.g. by employing ${\cal E}$ as a control to carry out
+$|e_k\rangle |c_0 \rangle \rightarrow |e_k\rangle |c_k \rangle $,
+where $|c_0\rangle$ is the initial state of ${\cal C}$ in some suitable
+orthonormal basis $\{|c_k\rangle \}$. Thus;
+%\begin{eqnarray*}
+$$ |\bar \Psi_{\cal SCE}\rangle \propto  \sqrt{m} ~ |0\rangle ~ \sum_{k=1}^m  {{ |c_k\rangle |e_k\rangle } \over \sqrt m} \\  
++ \sqrt {M-m}~|1\rangle \sum_{k=m+1}^M {{|c_k\rangle |e_k\rangle}
+\over \sqrt{M-m}} \eqno(3.8b) $$
+%\quad (\mathrm{9}a) \end{eqnarray*}
+obtains. This ${\cal CE}$ interaction can happen far from ${\cal S}$, so by Fact 1 it
+cannot influence probabilities in ${\cal S}$.
+$|\bar \Psi_{\cal SCE}\rangle $ is envariant under swaps of states 
+$|s, c_k\rangle$ of the composite ${\cal SC}$ system (where $s$ stands 
+for 0 or 1, as needed).
 % that are present (i.e., appear with a non-zero amplitude) in the $\Psi_{\cal SCE}$ above. 
-This is even moreapparent after the obvious cancellations;$$ |\bar \Psi_{\cal SCE}\rangle \propto\sum_{k=1}^m |0, c_k\rangle |e_k\rangle + \sum_{k=m+1}^M |1, c_k\rangle |e_k\rangle . \eqno(3.9b)$$Hence, $ p_{0,k} = p_{1,k} = \frac 1 M $. So,probabilities of $|0\rangle $ and $|1\rangle$:$$ p_0 = {m \over M} = |\alpha|^2; \ \ \p_1 = {{M-m} \over M} = |\beta|^2 \eqno(3.10b)$$are given by Born's rule. It arises from the most quantum aspects of the theory -- entanglement and envariance. 
+This is even more
+apparent after the obvious cancellations;
+$$ |\bar \Psi_{\cal SCE}\rangle \propto
+\sum_{k=1}^m |0, c_k\rangle |e_k\rangle +
+ \sum_{k=m+1}^M |1, c_k\rangle |e_k\rangle . \eqno(3.9b)$$
+Hence, $ p_{0,k} = p_{1,k} = \frac 1 M $. So,
+probabilities of $|0\rangle $ and $|1\rangle$:
+$$ p_0 = {m \over M} = |\alpha|^2; \ \ \
+p_1 = {{M-m} \over M} = |\beta|^2 \eqno(3.10b)$$
+are given by Born's rule. It arises from the most quantum aspects of the theory -- entanglement and envariance. 
 
 In contrast with other approaches, probabilities in our envariant derivation are a consequence of complementarity, of the incompatibility of purity of entangled state of the whole with purity of the 
 states of parts. Born's rule arises in a completely quantum setting, without any {\it a priori} imposition 
@@ -1017,9 +1082,27 @@ case of Eq. (3.10a) can be generalized (Zurek, 2005). In quantum setting this is
 advance. It can be made only because relative phases between Schmidt states are envariant -- because of decoherence. The case of more than two outcomes is straightforward, as is extension by continuity to incommensurate probabilities.
 
 \subsection{Relative frequencies from relative states}
-We can now use envariance to deduce relative frequencies.Consider ${\cal N}$ distinguishable ${\cal SCE}$ triplets, all in the state ofEq. (3.9). The state of the ensemble is then;$$|\Upsilon^{\cal N}_{\cal SCE}\rangle = \otimes_{\ell=1}^{\cal N}|\bar \Psi_{\cal SCE}^{(\ell)}\rangle \eqno(3.11)$$  We now repeat steps that led to Eqs. (3.10) for the ${\cal SCE}$ triplet,and think of ${\cal C}$ as a counter, a detector in whichstates $|c_1\rangle \dots |c_m\rangle$ record ``0'' in ${\cal S}$, while $|c_{m+1}\rangle \dots |c_M\rangle$ record ``1''.Carrying out tensor product and counting terms with $n$ detectionsof ``0'' yields the total$ \nu_{\cal N}(n) = {{\cal N} \choose n} m^n (M-m)^{{\cal N} - n}$ of fine-grained records -- or of the 
+
+We can now use envariance to deduce relative frequencies.
+Consider ${\cal N}$ distinguishable ${\cal SCE}$ triplets, all in the state of
+Eq. (3.9). The state of the ensemble is then;
+$$|\Upsilon^{\cal N}_{\cal SCE}\rangle = \otimes_{\ell=1}^{\cal N}
+|\bar \Psi_{\cal SCE}^{(\ell)}\rangle \eqno(3.11)$$  
+We now repeat steps that led to Eqs. (3.10) for the ${\cal SCE}$ triplet,
+and think of ${\cal C}$ as a counter, a detector in which
+states $|c_1\rangle \dots |c_m\rangle$ record ``0'' 
+in ${\cal S}$, while $|c_{m+1}\rangle \dots |c_M\rangle$ record ``1''.
+Carrying out tensor product and counting terms with $n$ detections
+of ``0'' yields the total
+$ \nu_{\cal N}(n) = {{\cal N} \choose n} m^n (M-m)^{{\cal N} - n}$ of fine-grained records -- or of the 
 corresponding envariantly swappable Everett branches with histories of detections that differ by a sequence of 0's and 1's, and by the labels assigned to them by the counter, but that have the same 
-total of 0's. Normalizing leads to probability of a record with $n$ 0's:$$ p_{\cal N}(n) = {{\cal N} \choose n} |\alpha|^{2n} |\beta|^{2({\cal N}-n)}\simeq { e^{- { 1 \over 2}\bigr({{n - |\alpha|{\cal N}} \over \sqrt {\cal N} |\alpha \beta|}\bigl)^2} \over {\sqrt{2 \pi {\cal N}} |\alpha \beta|}}\eqno(3.12)$$Gaussian approximation of a binomial is accurate for large ${\cal N}$: We shall assume ${\cal N}$ is
+total of 0's. Normalizing leads to probability of a record with $n$ 0's:
+$$ p_{\cal N}(n) = {{\cal N} \choose n} |\alpha|^{2n} |\beta|^{2({\cal N}-n)}
+\simeq { 
+e^{- { 1 \over 2}\bigr({{n - |\alpha|{\cal N}} \over \sqrt {\cal N} |\alpha \beta|}\bigl)^2} 
+\over {\sqrt{2 \pi {\cal N}} |\alpha \beta|}}
+\eqno(3.12)$$
+Gaussian approximation of a binomial is accurate for large ${\cal N}$: We shall assume ${\cal N}$ is
 large not because envariant derivation requires this (we have already obtained Born's rule for ${\cal N}=1$), but because relative frequency approach needs it (von Mises, 1939;  Gnedenko, 1968).
 
 The average number of 0's is, according to Eq. (3.12) $\langle n \rangle = | \alpha|^2 {\cal N}$, as expected, establishing a link between relative frequency of events in a large number of trials and Born's rule. This connection between quantum states and relative frequencies does not rest on either circular and {\it ad hoc} assumptions that relate size of the coefficients in the global state vector to probabilities (e.g., by asserting that probability corresponding to a small enough amplitude is 0 (Geroch 1984);  Buniy, Hsu, \& Zee, 2006)), modifications of quantum theory (Weissman, 1999), 
@@ -1172,12 +1255,12 @@ either scattered (or emitted) by the printed page (or by the computer screen). W
 of various systems indirectly, because their correlations with $\cE$ (which we shall quantify below 
 using mutual information) allow $\cE$ to be a witness to the state of the system.
 
-\begin{figure}[tb]
+\begin{figure}[htb]
 \begin{tabular}{l}
-\vspace{-0.15in} \includegraphics[width=\FCW]{EnvSubdivision.pdf}\\
+\vspace{-0.15in} \includegraphics[width=4.0in]{EnvSubdivision.pdf}\\
 %\includegraphics[width=\FCW]{PIP2.pdf}\\
 \end{tabular}
-\caption{\emph{Quantum Darwinism and the structure of the environment}.  The decoherence paradigm distinguishes between a system ($\Sys$) and its environment ($\Env$) as in \textbf{(a)}, but makes no further recognition of the structure of $\cE$; it could be as well monolithic.  In the environment-as-a-witness paradigm, we recognize subdivision of $\Env$ into subenvironments -- its natural subsystems, as in \textbf{(b)}. The only real requirement for a subsystem is that it should be individually accessible to measurements; observables corresponding to different subenvironments commute. To obtain information about the system $\cS$ from its environment $\cE$ one can then carry out measurements 
+\caption{\footnotesize \emph{Quantum Darwinism and the structure of the environment}.  The decoherence paradigm distinguishes between a system ($\Sys$) and its environment ($\Env$) as in \textbf{(a)}, but makes no further recognition of the structure of $\cE$; it could be as well monolithic.  In the environment-as-a-witness paradigm, we recognize subdivision of $\Env$ into subenvironments -- its natural subsystems, as in \textbf{(b)}. The only real requirement for a subsystem is that it should be individually accessible to measurements; observables corresponding to different subenvironments commute. To obtain information about the system $\cS$ from its environment $\cE$ one can then carry out measurements 
 of \emph{fragments} $\cF$ of the environment -- non-overlapping collections of the subsystems of $\cE$.  Sufficiently large fragments of $\cE$ that has monitored (and, therefore, decohered) $\cS$ can often 
 provide enough information to infer the state of $\Sys$, by combining subenvironments as in \textbf{(c)}.  
 There are then many copies of the information about $\cS$ in $\cE$, which implies that some information 
@@ -2163,7 +2246,8 @@ Les Houches Lectures}, R. Kaiser, C. Westbrook, and F. David, eds.
 
 \bibitem{54} Serafini, A., S. De Siena, F. Illuminati, M.G.A. Paris, 2004, J. Opt. B Quant. Semiclass. Opt. {\bf 6} S591.
 
-\bibitem{55} Tegmark, M., and Shapiro, H.~S., 1994, Phys.\ Rev. {\bfE50}, 2538.
+\bibitem{55} Tegmark, M., and Shapiro, H.~S., 1994, Phys.\ Rev. {\bf
+E50}, 2538.
 
 \bibitem{56} Unruh, W.~G., 1994, Phys. Rev. {\bf A50}, 882.
 
@@ -2228,7 +2312,8 @@ an `update', quant-ph/0306072.
 
 \bibitem{79} Zurek, W. H., 2007, arXiv:quant-ph/0703160.
 
-\bibitem{80} Zurek, W.~H., Habib, S., and Paz, J.-P., 1993, Phys.\Rev.\ Lett. {\bf 70}, 1187.
+\bibitem{80} Zurek, W.~H., Habib, S., and Paz, J.-P., 1993, Phys.\
+Rev.\ Lett. {\bf 70}, 1187.
 
 \end{thebibliography}
 
